Kube/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-db-deploy
  labels:
    app: python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: app
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: NodePort
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30007
